--- a/exercise 1.html
+++ b/exercise 1.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- adicionada tag style e adicionado margem no H1, você agora precisa arredondar a margem do H1 -->
+<style>
+h1{
+ border: 1px solid black;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-right: 150px;
+  margin-left: 80px;
+  background-color: #67c9c8;
+}
+</style>
 <title>Arvore de links test</title>
 </head>
 
