--- a/exercise 1.html
+++ b/exercise 1.html
@@ -3,12 +3,10 @@
 <head>
 <!-- adicionada tag style e adicionado margem no H1, você agora precisa arredondar a margem do H1 -->
 <style>
-h1{
- border: 1px solid black;
-  margin-top: 100px;
-  margin-bottom: 100px;
-  margin-right: 150px;
-  margin-left: 80px;
+p.round3 {
+ border: 2px solid blue;
+ border-radius: 12px;
+ padding: 3px;
   background-color: #67c9c8;
 }
 </style>
@@ -19,12 +17,16 @@ h1{
 
 <body style="text-align:center;"></body>
 
-<h1><a style="background-color:#67c9c8"href="https://minetestdicas.blogspot.com/">Minetest</a></p>
-<p style="background-color:#67c9c8;">Descubra tudo sobre Minetest </p>
+<h1><a style="background-color:>#67c9c8;"href="https://minetestdicas.blogspot.com/">Minetest</a></p>
+
+<p class="round3" style="background-color:#67c9c8;">Descubra tudo sobre Minetest </p>
+
 <h1><a style="background-color:#67c9c8;"href="https://ogawayamano.itch.io/">Ogawayamano</a></p>
-<p style="background-color:#67c9c8;">Descubra tudo sobre Ogawayamano </p>
+
+<p class="round3" style="background-color:#67c9c8;">Descubra tudo sobre Ogawayamano </p>
+
 <h1><a style="background-color:#67c9c8;"href=https://gachalifebr.blogspot.com/>Gacha life BR</a></p>
-<p style="background-color:#67c9c8;">Descubra tudo sobre gacha life </p>
+<p class="round3" style="background-color:#67c9c8;">Descubra tudo sobre gacha life </p>
 
 </body>
 
