--- a/exercise 1.html
+++ b/exercise 1.html
@@ -6,9 +6,13 @@
 p.round3 {
  border: 2px solid blue;
  border-radius: 12px;
- padding: 3px;
+ padding: 0px;
   background-color: #67c9c8;
 }
+img {
+  border-radius: 50%;
+
+  }
 </style>
 <title>Arvore de links test</title>
 </head>
