V2 project link tree
version 2 of my project link tree

New features (coisas novas adicionadas)
-Fundo(background)
-Borda colorida na imagem (coloured border in the image
-novas cores aos links e nas bordas(new colours to the links and the bordes
-Letras coloridas (letters coloured

--- a/exercise 1.html
+++ b/exercise 1.html
@@ -4,14 +4,26 @@
 <!-- adicionada tag style e adicionado margem no H1, você agora precisa arredondar a margem do H1 -->
 <style>
 p.round3 {
- border: 2px solid blue;
+ border-left-width: 4px;
+ border: 2px  solid purple;
  border-radius: 12px;
  padding: 0px;
-  background-color: #67c9c8;
+  background-color:purple;
+
 }
 img {
   border-radius: 50%;
+  border: 6px solid purple
 
+  }
+  body {
+  background-image: url("https://i.ibb.co/3YcbtVrq/nucleo-roxo.jpg")
+  }
+  body {
+  color: #8e12db;
+  }
+  p {
+  color: #8e12db;
   }
 </style>
 <title>Arvore de links test</title>
@@ -21,19 +33,22 @@ img {
 
 <body style="text-align:center;"></body>
 
-<h1><a style="background-color:>#67c9c8;"href="https://minetestdicas.blogspot.com/">Minetest</a></p>
+<h1><a style="background-color:#170533;"href=
+"https://minetestdicas.blogspot.com/">Minetest</a></p>
 
-<p class="round3" style="background-color:#67c9c8;">Descubra tudo sobre Minetest </p>
+<p class="round3" style="background-color:#170533;"width: 50%;">Descubra tudo sobre Minetest </p>
 
-<h1><a style="background-color:#67c9c8;"href="https://ogawayamano.itch.io/">Ogawayamano</a></p>
+<h1><a style="background-color:#170533;"href="https://ogawayamano.itch.io/">Ogawayamano</a></p>
 
-<p class="round3" style="background-color:#67c9c8;">Descubra tudo sobre Ogawayamano </p>
+<p class="round3" style="background-color:#170533;">Descubra tudo sobre Ogawayamano </p>
 
-<h1><a style="background-color:#67c9c8;"href=https://gachalifebr.blogspot.com/>Gacha life BR</a></p>
-<p class="round3" style="background-color:#67c9c8;">Descubra tudo sobre gacha life </p>
+<h1><a style="background-color:#170533;"href=https://gachalifebr.blogspot.com/>Gacha life BR</a></p>
+<p class="round3" style="background-color:#170533;">Descubra tudo sobre gacha life </p>
 
 </body>
 
 </html>
 
 </style>
+
+
