New update!(Nova Atualizaçao!)
New Features! Added(Novas Coisas Adicionadas!)
Share Buttons Added(Botoẽs de compartilhamento Adicionados)

--- a/exercise 1.html
+++ b/exercise 1.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+
 <!-- adicionada tag style e adicionado margem no H1, você agora precisa arredondar a margem do H1 -->
 <style>
 p.round3 {
@@ -44,6 +46,25 @@ img {
 
 <h1><a style="background-color:#170533;"href=https://gachalifebr.blogspot.com/>Gacha life BR</a></p>
 <p class="round3" style="background-color:#170533;">Descubra tudo sobre gacha life </p>
+
+<!-- AddToAny BEGIN -->
+<div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+<a class="a2a_dd" href="https://www.addtoany.com/share"></a>
+<a class="a2a_button_facebook"></a>
+<a class="a2a_button_pinterest"></a>
+<a class="a2a_button_telegram"></a>
+<a class="a2a_button_x"></a>
+<a class="a2a_button_tumblr"></a>
+<a class="a2a_button_blogger"></a>
+<a class="a2a_button_email"></a>
+</div>
+<script defer src="https://static.addtoany.com/menu/page.js"></script>
+<!-- AddToAny END -->
+
+
+
+
+
 
 </body>
 
